<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="START" />

        <RelativeLayout
            android:id="@+id/center_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/tile_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_0"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/tile_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_1"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/tile_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_2"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/tile_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_3"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/tile_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_4"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/tile_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_5"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/tile_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_6"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/tile_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tile_7"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>